syntax = "proto3";

package go.micro.srv.PutUserInfo;

service Example {
	rpc PutUserInfo(Request) returns (Response) {}

}


//web ——>srv
message Request {
//	sessionid
	string sessionid = 1;
//	名字
	string name = 2;
}
//srv -->web
message Response {
//	错误码
	string errno = 1;

//	错误信息
	string errmsg = 2;

//	名字
	string name = 3;

}


